--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@
   fill: lightblue !important;
 }
 
+@keyframes dashmove {
+  to {
+    stroke-dashoffset: -20;
+  }
+}
 
-
-
+.leaflet-animated-path {
+  stroke-dasharray: 10, 10;
+  stroke-dashoffset: 0;
+  animation: dashmove 1s linear infinite;
+}
